--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,7 @@
 .grid_wrapper {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 4fr 7fr 3fr;
+    grid-template-rows: 10vh 7fr 3fr;
     grid-template-areas:
         'header header'
         'aside content'
